# code/resource-server/src/main/java/com/dietiestates/resource_server/dto/response/GeographicalPositionResponse.java
@@ -17,6 +17,7 @@ public class GeographicalPositionResponse {
     private LocalDateTime createdDate;
     private LocalDateTime lastModifiedDate;
     private String city;
+    private String region;
     private String municipality;
     private String address;
     private Double longitude;
