# code/resource-server/src/main/java/com/dietiestates/resource_server/repository/GeographicalPositionRepository.java
@@ -7,4 +7,9 @@ import java.util.Optional;
 
 public interface GeographicalPositionRepository extends CrudRepository<GeographicalPosition, Long> {
     boolean existsById(Long id);
+    Optional<GeographicalPosition> findByRegionAndCityAndMunicipality(
+            String region,
+            String city,
+            String municipality
+    );
 }
